--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -18,7 +18,7 @@ import Col from "../../components/Col.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
-<Layout title = "Vector calculus" description = "Learn about the dot product, cross product, and how to apply Calculus principles to vectors.">
+<Layout title = "Vector calculus" description = "Learn about the dot product, cross product, and how to apply calculus principles to vectors.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
