Statics/Dynamics Astro descriptions (#238)
* capitalization

small lowercase instance

* Statics replacements for "Astro description"

Added descriptions using the updated Layout element \\ standardized navtree in the pltips page

* Fixed spelling mistake

* spelling mistake fix

* TAM 212 Astro description replacements

added page descriptions for dynamics pages

* grammar adjustment

* grammar adjustment

* wording adjustment

* Update vector_calculus.astro

---------

Co-authored-by: mrhoyle2 <105934511+mrhoyle2@users.noreply.github.com>

--- a/src/pages/sta/pltips.astro
+++ b/src/pages/sta/pltips.astro
@@ -8,14 +8,14 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 import SubSubSection from "../../components/SubSubSection.astro"
 ---
 
-<Layout title="About">
+<Layout title = "PrairieLearn tips" description = "This page contains useful information regarding PrairieLearn and the CBTF.">
 <div slot="navtree">
     <ul class='list-group list-group-flush py-0'> 
         <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#inputs'>Inputting answers</a></li> 
-        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#quizzes'>Reviewing for quizzes</a></li>
-        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#cbtf'>The CBTF</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#quizzes'>Reviewing for CBTF quizzes</a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#cbtf'>Computer Based Testing Facility (CBTF)</a>
             <ul class='list-group list-group-flush py-0'> 
-                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cbtf-policies'>CBTF policies</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cbtf-policies'>Important CBTF policies</a></li> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#computation'>Computation at CBTF</a></li> 
             </ul>
         </li>
@@ -84,7 +84,7 @@ import SubSubSection from "../../components/SubSubSection.astro"
 </ul>
 </div>
 </SubSection>
-<SubSection title="Reviewing for CBTF Quizzes" id="quizzes">
+<SubSection title="Reviewing for CBTF quizzes" id="quizzes">
     <p>Review for quizzes with the relevant homework assignment. The course website tells you which
         homeworks are relevant and explicitly states the topics covered in each quiz. The quiz
         problems are similar to those found on the homework.</p>
@@ -133,7 +133,7 @@ import SubSubSection from "../../components/SubSubSection.astro"
     </div>
     
 </SubSection>
-<SubSubSection title="Important CBTF Policies" id="cbtf-policies">
+<SubSubSection title="Important CBTF policies" id="cbtf-policies">
     <ul>
         <li>If you have any problem during the exam, raise your hand. A proctor will come and help
             you. Remember that proctors cannot answer questions specific to your test. Use your best
