--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -369,7 +369,7 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 <DisplayEquation id="rvv-el" title="Length and angle from dot product." background="True" equation="\\begin{aligned} a &amp;= \\sqrt{\\vec{a} \\cdot\\vec{a}} \\\\ \\cos\\theta &amp;= \\frac{\\vec{b}\\cdot \\vec{a}}{b a}\\end{aligned}" derivation="True">
   <p>
-    The angle between <InlineEquation equation="\\vec{a}" /> and itself is $\theta = 0$,
+    The angle between <InlineEquation equation="\\vec{a}" /> and itself is $\\theta = 0$,
     so <InlineEquation equation="\\vec{a} \\cdot \\vec{a} = a^2 \\cos 0 = a^2" />, which
     gives the first equation for the length in terms of the
     dot product.
