--- a/src/pages/sol/bending.astro
+++ b/src/pages/sol/bending.astro
@@ -53,11 +53,11 @@ Transverse loads applied to a beam causes deflections, primarily up or down is r
 
 <strong>Internal</strong>
 
-<Image src='/sol/bending/internalSignConvention.png' width='5'> </Image>
+<Image src='/sol/bending/Internal sign convention - correct branding.png' width='5'> </Image>
 
  <strong>External</strong>
 
-<Image src='/sol/bending/externalSignConvention.png' width='4.5'> </Image>
+<Image src='/sol/bending/External sign convention - correct branding.png' width='4.5'> </Image>
 
 </SubSection>
 
