--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -201,6 +201,10 @@ All internal forces can be obtained from equilibrium analysis only
 		</ul>
 
               </p>
+
+        <p>
+            Click <a href = "https://www.mechref.org/mf/Stress_Concentrations/?searched=true&query=stress%20concen&origin=search"> here </a> to find more information on stress concentration.
+        </p>
         </CalloutCard>
  </CalloutContainer>
 
