--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -203,7 +203,7 @@ All internal forces can be obtained from equilibrium analysis only
               </p>
 
         <p>
-            Click <a href = "https://www.mechref.org/mf/Stress_Concentrations/?searched=true&query=stress%20concen&origin=search"> here </a> to find more information on stress concentration.
+            Click <a href = "https://www.mechref.org/mf/Stress_Concentrations/?searched=true&query=stress%20concen&origin=search"> here </a> to find more information on stress concentrations.
         </p>
         </CalloutCard>
  </CalloutContainer>
