--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -308,25 +308,6 @@ const path = Astro.url.pathname;
 </style>
 
 <header >
-    <div class="container-fluid campus px-0">
-        <div class="row mx-auto align-items-center">
-            <div id="campus_wordmark" class="campus-wordmark col p-0">
-                <a class="campus-wordmark__link d-flex" href="https://illinois.edu" aria-label="University of Illinois Urbana-Champaign; Link opens in new tab" target="_blank">
-                    <div class="block-i-container" style="margin-top: -8px;">
-                        <svg class="block-i" viewBox="0 0 55 79" xmlns="http://www.w3.org/2000/svg" tabindex="-1" style="display: block; width: 24px; ">
-                            <title>Block I logo</title>
-                            <path class="block-i__outline" tabindex="-1" d="M54.2 21.1V0H0v21.1h12v36.1H0v21.1h54.2V57.2h-12V21.1z"></path>
-                            <path class="block-i__fill" tabindex="-1" d="M42.1 18.1h9V3H3v15h9c1.7 0 3 1.3 3 3v36.1c0 1.7-1.3 3-3 3H3v15h48.1v-15h-9c-1.7 0-3-1.3-3-3v-36c0-1.7 1.4-3 3-3z"></path>
-                        </svg>
-                    </div>
-
-                    <div class="wordmark-container d-none d-sm-block">
-                        University of Illinois Urbana-Champaign
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
 
     <div class="container-fluid site px-0 d-flex flex-column">
         <div class="row wordmark flex-nowrap align-items-center d-flex flex-wrap flex-lg-row flex-column w-100">
@@ -334,12 +315,12 @@ const path = Astro.url.pathname;
                 <div class="site_identification">
                     <div class="parent_name hide-empty d-none d-sm-block" data-value="35">
                         <a href="https://mechse.illinois.edu" target="_blank" aria-label="The Grainger College of Engineering; Link opens in new tab">
-                            <span>Mechanical Science &amp; Engineering</span>
+                            <span>Mechanical Engineering</span>
                         </a>
                     </div>
                     <div class="site_name">
                         <a href="/" aria-label="Mechanical Science &amp; Engineering" class="site_name">
-                            <span>MechSE Reference Pages</span>
+                            <span>Reference Pages</span>
                         </a>
                     </div>
                 </div>
