oshat task 219 about us page changes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,13 @@ import SubSection from "../components/SubSection.astro"
 <Layout title="About">
 <Section title="About">
     <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a href="/about/team" class="text-body">The project and our team</a></li>
         <li class="list-group-item"><a href="/about/students"  class="text-body">For students</a></li>
+        
+    </ul>
+</Section>
+<SubSection title="Start building your course">
+    <ul class="list-group list-group-flush">
         <li class="list-group-item"><a href="/about/instructors" class="text-body">For instructors</a></li>
         <li class="list-group-item">
             Setup your own version of MechRef...
@@ -17,10 +23,7 @@ import SubSection from "../components/SubSection.astro"
                 <li class="list-group-item pb-0"><a href="/about/instructions/external" class="text-body">... as another college</a></li>
             </ul>
         </li>
-        <li class="list-group-item"><a href="/about/team" class="text-body">The project and our team</a></li>
     </ul>
-</Section>
-<SubSection title="Start building your course">
     <ul class="list-group list-group-flush">
         <li class="list-group-item">
             Skeleton pages
