vector calc navtree//s case

--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -34,13 +34,13 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     </li> 
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#derivatives'>Derivatives</a>
         <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newton_versus_leibniz_notation'>Newton versus Leibniz Notation</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newton_versus_leibniz_notation'>Newton versus Leibniz notation</a></li>
         </ul>
     </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#derivatives_and_vector_positions'>Derivatives and vector "positions"</a>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cartesian'>Cartesian</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#non-cartesian_polar_basis'>Non-Cartesian: Polar basis</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#non-cartesian_polar_basis'>Non-Cartesian: polar basis</a></li>
         </ul>
     </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#chain_rule'>Chain rule</a>
@@ -55,7 +55,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 </ul>
 </div>
 
-<Section title="Vector Calculus" id="vector_calculus"></Section>
+<Section title="Vector calculus" id="vector_calculus"></Section>
 
 <SubSection title="Dot product" id="dot_product">
     <p>
@@ -433,7 +433,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 
 </SubSection>
 
-<SubSubSection title="Newton versus Leibniz Notation" id="newton_versus_leibniz_notation">
+<SubSubSection title="Newton versus Leibniz notation" id="newton_versus_leibniz_notation">
   <p>
     Most people know who Isaac Newton is, but perhaps fewer 
     have heard of Gottfried Leibniz. Leibniz was a prolific 
@@ -649,7 +649,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 
 </SubSubSection>
     
-<SubSubSection title="Non-Cartesian: Polar basis" id="non-cartesian_polar_basis">
+<SubSubSection title="Non-Cartesian: polar basis" id="non-cartesian_polar_basis">
 
 
 
