--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -31,7 +31,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#polar_coordinate_system'>Polar coordinate system</a></li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#units'>Units</a></li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#unit_vectors'>Unit vectors</a></li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vectors_bases'>Vectors Bases</a>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vectors_bases'>Vectors bases</a>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#length_of_vectors'>Length of vectors</a></li>  
         </ul>
@@ -39,15 +39,11 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#changing_bases'>Changing bases</a></li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#projection_and_complementary_projection'>Projection and complementary projection</a></li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#change_in_length_and_direction'>Change in length and direction</a></li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#spherical_coordinates'>Spherical Coordinates</a></li>
-	<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#cylindrical_coordinates'>Cylindrical Coordinates</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#spherical_coordinates'>Spherical coordinates</a></li>
+	<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#cylindrical_coordinates'>Cylindrical coordinates</a></li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#applications'>Applications</a>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#shortest_flight_paths'>Shortest flight paths</a>
-                <ul class='list-group list-group-flush py-0'> 
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#shortest_paths_on_the_sphere'>Shortest paths on the sphere</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#proof_that_great_circles_are_shortest_paths'>Proof that great circles are shortest paths</a></li>
-                </ul>
             </li>
         </ul>
     </li> 
@@ -949,7 +945,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     </Center>
 </SubSection>
 
-<SubSection title="Spherical Coordinates" id="spherical_coordinates">
+<SubSection title="Spherical coordinates" id="spherical_coordinates">
 
     <p>
       The spherical coordinate system extends polar coordinates
@@ -1205,7 +1201,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
   </DisplayEquation>
 </SubSection>
 
-<SubSection title="Cylindrical Coordinates" id="cylindrical_coordinates">
+<SubSection title="Cylindrical coordinates" id="cylindrical_coordinates">
 
     <p>
       The cylindrical coordinate system extends polar coordinates into 3D by using the standard vertical coordinate \(z\) for the third.
