--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import SubSection from "../components/SubSection.astro"
 <Layout title="About">
 <Section title="About">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/about/students"  class="text-body">For students</a></li>
+        <li class="list-group-item"><a href="/about/reference_pages_tutorial"  class="text-body">Reference pages tutorial</a></li>
         <li class="list-group-item"><a href="/about/instructors" class="text-body">For instructors</a></li>
         <li class="list-group-item">
             Setup your own version of MechRef...
