--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -199,7 +199,7 @@ div.grid{
     </div>
 
     <div class="col-12 col-md-5 col-lg-5" id="info">
-        <p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
+        <p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering.</p>
 
         <p>You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors by clicking on the about page to the right of the top menu bar.</p>
     </div>
